# Playwright-Python

./: README.md  num_test.xlsx  pyproject.toml
practice/basics/: 3.record_a_trace.py  4.test_generater.py  getting_started.py  record_a_trace.py  take_screenshoot.py
practice/login/: 1.auto_login.py  2.github_login.py  3.LK_login.py  4.LK_search_lead.py  5.LK_data_fetch.py  6.LK_multiple_datafetch.py  7.LK_oops.py  8.read_excel.py
tests/: test_playwright_python.py
