[tool.poetry]
name = "playwright_python"
version = "0.1.0"
description = ""
authors = ["“mohanraj” <mohanraj@loanwiser.in>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.20.0"
wheel = "^0.37.1"
pytest-playwright = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
